lib/LMEngine.h

// Console linefeed & carriage return
#define LME_LF   L'\n'
#define LME_CR   L'\r'
#define LME_CRLF L"\n\r"
// Virtual Keys
#define LME_VKEY_ESCAPE  27
#define LME_VKEY_SPACE  32
// Primary console colors
#define LME_FG_BLUE         1
#define LME_FG_GREEN        2
#define LME_FG_RED          4
#define LME_FG_INTENSITY    8
#define LME_BG_BLUE         16
#define LME_BG_GREEN        32
#define LME_BG_RED          64
#define LME_BG_INTENSITY    128
// Custom console color
#define LME_FG_BRIGHTYELLOW (LME_FG_RED | LME_FG_GREEN | LME_FG_INTENSITY)
#define LME_FG_YELLOW       (LME_FG_RED | LME_FG_GREEN)
#define LME_FG_WHITE        (LME_FG_RED | LME_FG_GREEN | LME_FG_BLUE)
#define LME_FG_BRIGHTWHITE  (LME_FG_WHITE | LME_FG_INTENSITY)
#define LME_FG_DARKGREEN    LME_FG_GREEN
#define LME_FG_LIGHTGREEN   (LME_FG_GREEN | LME_FG_INTENSITY)
#define LME_FG_DARKGRAY     LME_FG_INTENSITY
#define LME_FG_CYAN         (LME_FG_GREEN | LME_FG_BLUE)
#define LME_FG_MAGENTA      (LME_FG_RED | LME_FG_BLUE)
#define LME_BG_BRIGHTYELLOW (LME_BG_RED | LME_BG_GREEN | LME_BG_INTENSITY)
#define LME_BG_YELLOW       (LME_BG_RED | LME_BG_GREEN)
#define LME_BG_WHITE        (LME_BG_RED | LME_BG_GREEN | LME_BG_BLUE)
#define LME_BG_BRIGHTWHITE  (LME_BG_WHITE | LME_BG_INTENSITY)
#define LME_BG_DARKGREEN    LME_BG_GREEN
#define LME_BG_LIGHTGREEN   (LME_BG_GREEN | LME_BG_INTENSITY)
#define LME_BG_DARKGRAY     LME_BG_INTENSITY
#define LME_BG_CYAN         (LME_BG_GREEN | LME_FG_BLUE)
#define LME_BG_MAGENTA      (LME_BG_RED | LME_FG_BLUE)
// Message roles
#define LME_ROLE_SYSTEM    L"system"
#define LME_ROLE_USER      L"user"
#define LME_ROLE_ASSISTANT L"assistant"
#define LME_ROLE_TOOL      L"tool"
// Speech Voice Attributes
#define LME_SPEECH_VOICEATTR_DESCRIPTION 0
#define LME_SPEECH_VOICEATTR_NAME        1
#define LME_SPEECH_VOICEATTR_VENDOR      2
#define LME_SPEECH_VOICEATTR_AGE         3
#define LME_SPEECH_VOICEATTR_GENDER      4
#define LME_SPEECH_VOICEATTR_LANGUAGE    5
#define LME_SPEECH_VOICEATTR_ID          6
// Token Response
#define LME_TOKENRESPONSE_WAIT    0
#define LME_TOKENRESPONSE_APPEND  1
#define LME_TOKENRESPONSE_NEWLINE 2
// Version
#define LME_VERSION_FULL  0
#define LME_VERSION_MAJOR 1
#define LME_VERSION_MINOR 2
#define LME_VERSION_PATCH 3
// Callbacks
typedef void (*LME_SpeechWordCallback)(const wchar_t* AWord,
  const wchar_t* AText, const void* AUserData);
typedef bool (*LME_InferenceCancelCallback)(const void* AUserData);
typedef void (*LME_InferenceTokenCallback)(const wchar_t* AToken,
  const void* AUserData);
typedef void (*LME_InfoCallback)(int ALevel, const wchar_t* AText,
  const void* AUserData);
typedef bool (*LME_LoadModelProgressCallback)(const wchar_t* AModelName,
  float AProgress, const void* AUserData);
typedef void (*LME_LoadModelCallback)(const wchar_t* AModelName, bool ASuccess,
  const void* AUserData);
typedef void (*LME_InferenceStartCallback)(const void* AUserData);
typedef void (*LME_InferenceEndCallback)(const void* AUserData);
/// <summary>
///   Prints text to the console.
/// </summary>
/// <param name="AText">
///   The text to be printed.
/// </param>
/// <param name="AColor">
///   The color of the text.
/// </param>
void LME_Print(const wchar_t* AText, int AColor, ...);
/// <summary>
///   Prints text to the console with a line feed and carriage return.
/// </summary>
/// <param name="AText">
///   The text to be printed.
/// </param>
/// <param name="AColor">
///   The color of the text.
/// </param>
void LME_PrintLn(const wchar_t* AText, int AColor, ...);
/// <summary>
///   Gets the console cursor X and Y position.
/// </summary>
/// <param name="X">
///   The X position of the cursor.
/// </param>
/// <param name="Y">
///   The Y position of the cursor.
/// </param>
void LME_GetCursorPos(int* X, int* Y);
/// <summary>
///   Sets the console cursor X and Y position.
/// </summary>
/// <param name="X">
///   The X position of the cursor.
/// </param>
/// <param name="Y">
///   The Y position of the cursor.
/// </param>
void LME_SetCursorPos(int X, int Y);
/// <summary>
///   Clears the current console screen.
/// </summary>
void LME_ClearConsole();
/// <summary>
///   Clears the current console line.
/// </summary>
/// <param name="AColor">
///   The color to use when clearing the line.
/// </param>
void LME_ClearConsoleLine(int AColor);
/// <summary>
///   Clears the keyboard states.
/// </summary>
void LME_ClearKeyStates();
/// <summary>
///   Checks if a key is currently held down.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key is held down, otherwise False.
/// </returns>
bool LME_IsKeyPressed(unsigned char AKey);
/// <summary>
///   Checks if a key was recently released.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key was released, otherwise False.
/// </returns>
bool LME_WasKeyReleased(unsigned char AKey);
/// <summary>
///   Checks if a key was recently pressed.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key was pressed, otherwise False.
/// </returns>
bool LME_WasKeyPressed(unsigned char AKey);
/// <summary>
///   Pauses execution until any key is pressed.
/// </summary>
/// <param name="AForcePause">
///   If True, forces a pause.
/// </param>
/// <param name="AColor">
///   The color to use during the pause.
/// </param>
/// <param name="AText">
///   The text to display during the pause.
/// </param>
void LME_Pause(bool AForcePause=true, int AColor=LME_FG_WHITE,
  const wchar_t* AText=NULL);
/// <summary>
///   Processes Windows messages.
/// </summary>
void LME_ProcessMessages();
/// <summary>
///   Masks out the first word found in a text string.
/// </summary>
/// <param name="AText">
///   The text to search.
/// </param>
/// <param name="AWord">
///   The word to mask.
/// </param>
/// <returns>
///   The modified text with the first found word masked.
/// </returns>
wchar_t* LME_MaskFirstFoundWord(const wchar_t* AText, const wchar_t* AWord);
/// <summary>
///   Sets the token response right margin.
/// </summary>
/// <param name="AMargin">
///   The right margin value.
/// </param>
void LME_SetTokenResponseRightMargin(int AMargin);
/// <summary>
///   Adds a new token to token response.
/// </summary>
/// <param name="AToken">
///   The token to add.
/// </param>
/// <returns>
///   An integer representing the token response.
/// </returns>
int LME_AddTokenResponseToken(const wchar_t* AToken);
/// <summary>
///   Gets the last word from token response.
/// </summary>
/// <param name="ATrimLeft">
///   If True, trims the left side.
/// </param>
/// <returns>
///   The last word from the token response.
/// </returns>
wchar_t* LME_LastTokenResponseWord(bool ATrimLeft);
/// <summary>
///   Checks if all words have been processed in token response.
/// </summary>
/// <returns>
///   True if all words have been processed, otherwise False.
/// </returns>
bool LME_FinalizeTokenResponse();
/// <summary>
///   Sets the speech word callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetSpeechWordCallback(LME_SpeechWordCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the speech word callback.
/// </summary>
/// <returns>
///   The current speech word callback.
/// </returns>
LME_SpeechWordCallback LME_GetSpeechWordCallback();
/// <summary>
///   Gets the speech voice count.
/// </summary>
/// <returns>
///   The number of available speech voices.
/// </returns>
int LME_GetSpeechVoiceCount();
/// <summary>
///   Gets a speech voice attribute.
/// </summary>
/// <param name="AIndex">
///   The index of the speech voice.
/// </param>
/// <param name="AAttribute">
///   The attribute to retrieve.
/// </param>
/// <returns>
///   The attribute value as a string.
/// </returns>
wchar_t* LME_GetSpeechVoiceAttribute(int AIndex, unsigned char AAttribute);
/// <summary>
///   Changes the speech voice speed.
/// </summary>
/// <param name="AIndex">
///   The index of the speech voice.
/// </param>
void LME_ChangeSpeechVoice(int AIndex);