lib/LMEngine.pas

{* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
        %%%%@%%%%%%%@%%%%%%%%%%%%%%%%*#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
        %%%%%%%%%%%%%%%%%%=%%%%%%%%%#.-%%%%%%%%%%#%%%%%%%%%%%%%%%%%%
        %%%%%%%%%%%%#:=:#%%%%+******#%%#******+%%%%#:=:*%%%%%%%%%%%%
        %%%%%%%%%%%%#-=.#%%%#*%%%%%%%--#%%%%@@**@@@#.=-#%%%%%%%%%%%%
        %%%%%%%**#%%%%%+*%%%#--*%#*+:  :+*%%*==#@@@*+%%%%%%*#%%%%%%%
        %%%%%%=-#.#%%%%+*%%%%      .::::.....::%@@@*+%%%%%=%**@%%%%%
        %%%%%%%==+%%%%%%+%%*.  :+####*#####+-::-#@%+%%%%%%#**%@%%%%%
        %%%%-*%%%%*+***#     -##+--------=+#%#=:---=%***+*@%%%#=%%%%
        %%%%%%%%%%-%%%%%#  .+%+-:=*#*++**+=-=#%+--=%%%%%%-#%%%%%%%%%
        %+#%%%%%%%%%%%%%*  +%+:-+#-.:+**=+#=+-#%=-=#%%%%%%%#%%%%%**%
        %%%#=*%###: .-*=. :#*-:=%::=%%%%%*+%=++##:=+**: :=%%#%=+%%%%
        %%%#:+%++= .:--   :%*--+%.=%%%%%%#+%-++##.===: .:-*#*%--%%%%
        %%@%*#%*+%*=+*%%= .*#+:+##-*%%%%#+#*--*%+:=#@%+=+*%##%#+%@%%
        %%@%+#%##@%#+%%@%. :##+-+##*+***##=--*##.=+%@@@+#%@%%%#+%%%%
        %%%%**%:*=%#+@@%=...:+%#+===+++=--=+#%=.===*%@@+#@+*=%#*%%%%
        %%%%%**-*=*****%-=+=:::=#%%#****##%*=.-=****%*****=*=**%%%%%
        %%%%*=@=#+%#+*+%#%@@%-::::--====-:::-=+%@@%+%+*+*%=#=%*#%%%%
        %%%%%%@%#%@*+*+%#%@@#::=#*++=--=+**#+==%@@%=%=*+*%%#%%%%%%%%
        %%%%%%%%*%+%%%%#*%@@%%#%%%%%#--#@%%%%%%@@@@+#%%%%%%#%%%%%%%%
        %%%%%%%%@%*%%%=#+*%%=-=:%%%*. .-#%%%####@@*+#+#%%#%%%%%%%%%%
        %%%%%%%%%%%%%%+*+#%%+-==%%%-..:-+%%%####@@%+**%%%%@%@%%%%%%%
        %%%%%%%%%%%%%%%%%%#%%*+*%%%%+=+*%%%%*+*%@%%@#%@@@%@%%%%%%%%%
        %%%%%%%%%%%%%%%%%%%%*+%=*%%%%**%%%%*=%+*@%%%%%%%%%%%%%%%%%%%
        %%%%%%%%%%%%%%%%%%%%%#*#%@%%%:=%%%@%#**%%%%%%%%%%%%%%%%%%%%%
                _     __  __  ___              _
               | |   |  \/  || __| _ _   __ _ (_) _ _   ___™
               | |__ | |\/| || _| | ' \ / _` || || ' \ / -_)
               |____||_|  |_||___||_||_|\__, ||_||_||_|\___|
                                        |___/
                          Local LLM Inference

                 Copyright © 2024-present tinyBigGAMES™ LLC
                          All Rights Reserved.

                    Website: https://tinybiggames.com
                    Email  : support@tinybiggames.com

                 See LICENSE file for license information
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *}

unit LMEngine;

{$IFDEF FPC}
{$MODE DELPHIUNICODE}
{$ENDIF}

{$IFNDEF WIN64}
  {$MESSAGE Error 'Unsupported platform'}
{$ENDIF}

interface

const
  // Infero DLL
  LMENGINE_DLL = 'LMEngine.dll';

  // Console linefeed & carriage return
  LME_LF   = AnsiChar(#10);
  LME_CR   = AnsiChar(#13);
  LME_CRLF = LME_LF+LME_CR;

  // Virtual Keys
  LME_VKEY_ESCAPE  = 27;
  LME_VKEY_SPACE  = 32;

  // Primary console colors
  LME_FG_BLUE         = 1;
  LME_FG_GREEN        = 2;
  LME_FG_RED          = 4;
  LME_FG_INTENSITY    = 8;
  LME_BG_BLUE         = $10;
  LME_BG_GREEN        = $20;
  LME_BG_RED          = $40;
  LME_BG_INTENSITY    = $80;

  // Custom console color
  LME_FG_BRIGHTYELLOW = LME_FG_RED OR LME_FG_GREEN OR LME_FG_INTENSITY;
  LME_FG_YELLOW       = LME_FG_RED OR LME_FG_GREEN;
  LME_FG_WHITE        = LME_FG_RED OR LME_FG_GREEN OR LME_FG_BLUE;
  LME_FG_BRIGHTWHITE  = LME_FG_WHITE OR LME_FG_INTENSITY;
  LME_FG_DARKGREEN    = LME_FG_GREEN;
  LME_FG_LIGHTGREEN   = LME_FG_GREEN or LME_FG_INTENSITY;
  LME_FG_DARKGRAY     = LME_FG_INTENSITY;
  LME_FG_CYAN         = LME_FG_GREEN OR LME_FG_BLUE;
  LME_FG_MAGENTA      = LME_FG_RED OR LME_FG_BLUE;

  LME_BG_BRIGHTYELLOW = LME_BG_RED OR LME_BG_GREEN OR LME_BG_INTENSITY;
  LME_BG_YELLOW       = LME_BG_RED OR LME_BG_GREEN;
  LME_BG_WHITE        = LME_BG_RED OR LME_BG_GREEN OR LME_BG_BLUE;
  LME_BG_BRIGHTWHITE  = LME_BG_WHITE OR LME_BG_INTENSITY;
  LME_BG_DARKGREEN    = LME_BG_GREEN;
  LME_BG_LIGHTGREEN   = LME_BG_GREEN or LME_BG_INTENSITY;
  LME_BG_DARKGRAY     = LME_BG_INTENSITY;
  LME_BG_CYAN         = LME_BG_GREEN OR LME_FG_BLUE;
  LME_BG_MAGENTA      = LME_BG_RED OR LME_FG_BLUE;

  // Message roles
  LME_ROLE_SYSTEM    = 'system';
  LME_ROLE_USER      = 'user';
  LME_ROLE_ASSISTANT = 'assistant';
  LME_ROLE_TOOL      = 'tool';

  // Speech Voice Attributes
  LME_SPEECH_VOICEATTR_DESCRIPTION = 0;
  LME_SPEECH_VOICEATTR_NAME        = 1;
  LME_SPEECH_VOICEATTR_VENDOR      = 2;
  LME_SPEECH_VOICEATTR_AGE         = 3;
  LME_SPEECH_VOICEATTR_GENDER      = 4;
  LME_SPEECH_VOICEATTR_LANGUAGE    = 5;
  LME_SPEECH_VOICEATTR_ID          = 6;

  // Token Response
  LME_TOKENRESPONSE_WAIT    = 0;
  LME_TOKENRESPONSE_APPEND  = 1;
  LME_TOKENRESPONSE_NEWLINE = 2;

  // Version
  LME_VERSION_FULL  = 0;
  LME_VERSION_MAJOR = 1;
  LME_VERSION_MINOR = 2;
  LME_VERSION_PATCH = 3;

type
  PInt32 = ^PInteger;

  // Callbacks
  LME_SpeechWordCallback = procedure(const AWord, AText: PWideChar;
    const AUserData: Pointer); cdecl;

  LME_InferenceCancelCallback = function(
    const AUserData: Pointer): Boolean; cdecl;

  LME_InferenceTokenCallback = procedure(const AToken: PWideChar;
    const AUserData: Pointer); cdecl;

  LME_InfoCallback = procedure(const ALevel: Integer; const AText: PWideChar;
    const AUserData: Pointer); cdecl;

  LME_LoadModelProgressCallback = function(const AModelName: PWideChar;
    const AProgress: Single; const AUserData: Pointer): Boolean; cdecl;

  LME_LoadModelCallback = procedure(const AModelName: PWideChar;
    const ASuccess: Boolean; const AUserData: Pointer); cdecl;

  LME_InferenceStartCallback = procedure(const AUserData: Pointer); cdecl;

  LME_InferenceEndCallback = procedure(const AUserData: Pointer); cdecl;

/// <summary>
///   Prints text to the console.
/// </summary>
/// <param name="AText">
///   The text to be printed.
/// </param>
/// <param name="AColor">
///   The color of the text.
/// </param>
procedure LME_Print(const AText: PWideChar; const AColor: Integer); cdecl;
  varargs; external LMENGINE_DLL;

/// <summary>
///   Prints text to the console with a line feed and carriage return.
/// </summary>
/// <param name="AText">
///   The text to be printed.
/// </param>
/// <param name="AColor">
///   The color of the text.
/// </param>
procedure LME_PrintLn(const AText: PWideChar; const AColor: Integer); cdecl;
  varargs; external LMENGINE_DLL;

/// <summary>
///   Gets the console cursor X and Y position.
/// </summary>
/// <param name="X">
///   The X position of the cursor.
/// </param>
/// <param name="Y">
///   The Y position of the cursor.
/// </param>
procedure LME_GetCursorPos(X, Y: PInteger); cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets the console cursor X and Y position.
/// </summary>
/// <param name="X">
///   The X position of the cursor.
/// </param>
/// <param name="Y">
///   The Y position of the cursor.
/// </param>
procedure LME_SetCursorPos(const X, Y: Integer); cdecl; external LMENGINE_DLL;

/// <summary>
///   Clears the current console screen.
/// </summary>
procedure LME_ClearConsole(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Clears the current console line.
/// </summary>
/// <param name="AColor">
///   The color to use when clearing the line.
/// </param>
procedure LME_ClearConsoleLine(const AColor: WORD); cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Clears the keyboard states.
/// </summary>
procedure LME_ClearKeyStates(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Checks if a key is currently held down.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key is held down, otherwise False.
/// </returns>
function LME_IsKeyPressed(AKey: Byte): Boolean; cdecl; external LMENGINE_DLL;

/// <summary>
///   Checks if a key was recently released.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key was released, otherwise False.
/// </returns>
function LME_WasKeyReleased(AKey: Byte): Boolean; cdecl; external LMENGINE_DLL;

/// <summary>
///   Checks if a key was recently pressed.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key was pressed, otherwise False.
/// </returns>
function LME_WasKeyPressed(AKey: Byte): Boolean; cdecl; external LMENGINE_DLL;

/// <summary>
///   Pauses execution until any key is pressed.
/// </summary>
/// <param name="AForcePause">
///   If True, forces a pause.
/// </param>
/// <param name="AColor">
///   The color to use during the pause.
/// </param>
/// <param name="AText">
///   The text to display during the pause.
/// </param>
procedure LME_Pause(const AForcePause: Boolean=False; AColor: WORD=LME_FG_WHITE;
  const AText: PWideChar=nil); cdecl; external LMENGINE_DLL;

/// <summary>
///   Processes Windows messages.
/// </summary>
procedure LME_ProcessMessages(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Masks out the first word found in a text string.
/// </summary>
/// <param name="AText">
///   The text to search.
/// </param>
/// <param name="AWord">
///   The word to mask.
/// </param>
/// <returns>
///   The modified text with the first found word masked.
/// </returns>
function LME_MaskFirstFoundWord(const AText, AWord: PWideChar): PWideChar;
  cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets the token response right margin.
/// </summary>
/// <param name="AMargin">
///   The right margin value.
/// </param>
procedure LME_SetTokenResponseRightMargin(const AMargin: Integer); cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Adds a new token to token response.
/// </summary>
/// <param name="AToken">
///   The token to add.
/// </param>
/// <returns>
///   An integer representing the token response.
/// </returns>
function LME_AddTokenResponseToken(const AToken: PWideChar): Integer; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Gets the last word from token response.
/// </summary>
/// <param name="ATrimLeft">
///   If True, trims the left side.
/// </param>
/// <returns>
///   The last word from the token response.
/// </returns>
function LME_LastTokenResponseWord(const ATrimLeft: Boolean): PWideChar; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Checks if all words have been processed in token response.
/// </summary>
/// <returns>
///   True if all words have been processed, otherwise False.
/// </returns>
function LME_FinalizeTokenResponse(): Boolean; cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets the speech word callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetSpeechWordCallback(const AHandler: LME_SpeechWordCallback;
  const AUserData: Pointer); cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the speech word callback.
/// </summary>
/// <returns>
///   The current speech word callback.
/// </returns>
function LME_GetSpeechWordCallback(): LME_SpeechWordCallback; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Gets the speech voice count.
/// </summary>
/// <returns>
///   The number of available speech voices.
/// </returns>
function LME_GetSpeechVoiceCount(): Integer; cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets a speech voice attribute.
/// </summary>
/// <param name="AIndex">
///   The index of the speech voice.
/// </param>
/// <param name="AAttribute">
///   The attribute to retrieve.
/// </param>
/// <returns>
///   The attribute value as a string.
/// </returns>
function LME_GetSpeechVoiceAttribute(const AIndex: Integer;
  const AAttribute: Byte): PWideChar; cdecl; external LMENGINE_DLL;

/// <summary>
///   Changes the speech voice speed.
/// </summary>
/// <param name="AIndex">
///   The index of the speech voice.
/// </param>
procedure LME_ChangeSpeechVoice(const AIndex: Integer); cdecl;
  external LMENGINE_DLL;
